src/ListItem.css
.Bold {
  color: red;
}

.Item {
    margin-bottom: 12px;
    display: flex;
    text-align: left;
}

.DateLabel {
    margin-right: 10px;
    flex: 0 0 100px;
    color: #afafaf;
}
.DateLabelDate {
    color: #CCC;
    margin-right: 10px;
}

.Value {
    text-align: left;
    display: block;
    font-family: monospace;
    white-space: nowrap;
    overflow-x: scroll;
}

.CodeMirrorContainer {
    overflow: hidden;
}
.CodeMirrorContainer .react-codemirror2 {
    border: 2px solid #CCC;
}

